--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -141,6 +141,19 @@ h6 {
 .footer-logo{
   height: 80px !important;
 }
+
+.contact{
+  background-image: url('../img/recnaile/drone3.jpeg');
+}
+
+/* Genie Effect */
+
+
+
+
+
+
+
 /* updated----------------------------------- */
 
 
@@ -1726,6 +1739,8 @@ section,
   height: 100%;
   padding: 30px;
 }
+
+
 
 @media (max-width: 575px) {
   .contact .php-email-form {
