--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -143,7 +143,8 @@ h6 {
 }
 
 .contact {
-  background-image: url("../img/recnaile/drone3.jpeg");
+  /* background-image: url("../img/recnaile/drone3.jpeg"); */
+  background-color:#003b70 !important;
 }
 
 /* Genie Effect */
